Thu Dec 17 09:52:52 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3790_Regression/simple_test.idl:
        * tests/Bug_3790_Regression/simple_test_i.cpp:
        * tests/Bug_3790_Regression/simple_test_i.h:
        * tests/Bug_3790_Regression/server.cpp:
        * tests/Bug_3790_Regression/server2.cpp:
        * tests/Bug_3790_Regression/run_test.pl:
        * tests/Bug_3790_Regression/README:
        * tests/Bug_3790_Regression/Bug_3790_Regression.mpc:
        * bin/tao_orb_tests.lst:
          Added a test for bug#3790 and scheduled it for run as not fixed.

Wed Dec 16 19:22:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CDR/run_test.pl:
          Fuzz fix.

Wed Dec 16 15:19:22 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * tests/RTCORBA/MT_Client_Protocol_Priority/run_test.pl:

          Fuzz fix.

Wed Dec 16 14:18:03 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Notify/Timeout/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2561_Regression/run_test.pl:
        * orbsvcs/tests/Notify/MT_Dispatching/run_test.pl:
        * orbsvcs/tests/Notify/Bug_1385_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Persistent_POA/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646a_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646c_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Reconnecting/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
        * orbsvcs/tests/Notify/Basic/run_test.pl:
        * orbsvcs/tests/Notify/Structured_Multi_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Sequence_Multi_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2415_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Blocking/run_test.pl:
        * orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Lanes/run_test.pl:
        * orbsvcs/tests/Notify/Structured_Filter/run_test.pl:
