@@ -1,3 +1,10 @@
+Thu Dec 17 10:22:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>
+
+        * tao/GIOP_Message_Base.cpp:
+          Fixed missing request id in logging of LocateRequest/LocateReply & 
+          CancelRequest.
+          This fixed Bugzilla #2898.
+
 Thu Dec 17 09:52:52 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tests/Bug_3790_Regression/simple_test.idl:
